[package]
name = "todolist-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
crossterm = "0.27.0"
itertools = "0.11.0"
ratatui = { version = "0.23.0", features = ["all-widgets"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
winreg = "0.51.0"
